--- a/WebRoot/css/bookinfo.css
+++ b/WebRoot/css/bookinfo.css
@@ -13,6 +13,7 @@
     clear: both;
     overflow: hidden;
     position: relative;
+    height:100%;
 }
 .contain_left{
     padding: 10px;
@@ -100,7 +101,7 @@
 }
 
 .contain2{
-    padding: 20px; margin-top:10px;
+    padding: 20px; margin-top:0px;
     border:1px solid #DDDDDD;
     padding: 0px;
     height: 400px;
